<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/CategoryLabelTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/etCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/etCategoryNameHint"/>

    <Button
        android:id="@+id/btnAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddTxt"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvDelCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDelCatTxt"
        android:textSize="30sp"
        android:textAlignment="center"
        android:padding="10dp"/>

    <Spinner
        android:id="@+id/spnDelCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnDeleteCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelCatTxt"
        android:padding="10dp"/>


</LinearLayout>
