<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/tvAddTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="100">

                <TextView
                    android:text="@string/tvTaskName"
                    android:layout_weight="30"
                    style="@style/AddTaskLabels"/>

                <EditText
                    android:id="@+id/etTaskName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="100">

                <TextView
                    android:text="@string/tvTaskDate"
                    android:layout_weight="30"
                    style="@style/AddTaskLabels"/>

                <EditText
                    android:id="@+id/etTaskDueDate"
                    android:hint="@string/dueDateHint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:inputType="date"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="100">

                <TextView
                    android:text="@string/tvPriority"
                    android:layout_weight="30"
                    style="@style/AddTaskLabels"/>

                <Spinner
                    android:id="@+id/spnPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70">
                </Spinner>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="100">

                <TextView
                    android:text="@string/tvCategory"
                    android:layout_weight="30"
                    style="@style/AddTaskLabels"/>

                <Spinner
                    android:id="@+id/spnCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70">
                </Spinner>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnAddTask"
        android:text="@string/btnAddTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
